<resources>
    <string name="app_name">Personal Task Manager</string>
    <string name="tasks">Tasks</string>
    <string name="statistic">Statistic</string>

    <string name="projects">Projects</string>
    <string name="today">Today</string>
    <string name="next7days">Next 7 days</string>
    <string name="completed_tasks">Completed</string>
    <string name="overdue_tasks">Overdue</string>

    <!-- PROJECT -->
    <string name="new_project">New Project</string>
    <string name="edit_project">Edit Project</string>
    <string name="delete_project">Delete Project</string>
    <string name="project_name">Project Name</string>
    <string name="project_position">Project position</string>
    <string name="delete_project_alert_msg">Are you sure you want to delete project? All your tasks in this project will be deleted too.</string>
    <string name="new_project_error_toast_msg">Missing title</string>
    <string name="choose_an_action">Choose an action</string>
    <string name="project">Project</string>


    <!-- TASK -->
    <string name="new_task">New Task in </string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="edit_task_in">Edit Task in</string>
    <string name="date">Date</string>
    <string name="duration_time">Duration</string>
    <string name="note">Note</string>
    <string name="delete_task_alert_msg">Are you sure you want to delete task?</string>
    <string name="bundle_date_parts">BUNDLE DATE PARTS</string>
    <string name="bundle_time_parts">BUNDLE_TIME_PARTS</string>
    <string name="new_task_error_toast_msg">Missing title or date</string>
    <string name="task_position">Task position</string>
    <string name="task">Task</string>

    <!-- BOTH -->
    <string name="title">Title</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="week_label">week</string>
    <string name="dialog_date">DATE</string>
    <string name="dialog_time">TIME</string>

    <string name="delete">Delete</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="all">All</string>
    <string name="done">Done</string>
    <string name="overdue">Overdue</string>


</resources>
