<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/page_margin"
    tools:context="hu.bme.aut.personaltaskmanager.ui.handling_tasks.TaskDetailsActivity">

    <LinearLayout style="@style/DetailLinearLayout">

        <android.support.v7.widget.CardView
            style="@style/DetailCardView"
            app:cardCornerRadius="10dp">

            <LinearLayout style="@style/DetailLinearLayout">

                <TextView
                    style="@style/DetailsTitle"
                    android:text="@string/title" />

                <TextView
                    android:id="@+id/tvTitleOfTask"
                    style="@style/DetailsContent" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/DetailCardView"
            app:cardCornerRadius="10dp">

            <LinearLayout style="@style/DetailLinearLayout">

                <TextView
                    style="@style/DetailsTitle"
                    android:text="@string/project_name" />

                <TextView
                    android:id="@+id/tvProjectOfTask"
                    style="@style/DetailsContent" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/DetailCardView"
            app:cardCornerRadius="10dp">

            <LinearLayout style="@style/DetailLinearLayout">

                <TextView
                    style="@style/DetailsTitle"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/tvDateOfTask"
                    style="@style/DetailsContent" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/DetailCardView"
            app:cardCornerRadius="10dp">

            <LinearLayout style="@style/DetailLinearLayout">

                <TextView
                    style="@style/DetailsTitle"
                    android:text="@string/note" />

                <TextView
                    android:id="@+id/tvNoteOfTask"
                    style="@style/DetailsContent" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <info.hoang8f.widget.FButton
            android:id="@+id/btnEditTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/edit_task"
            android:textColor="@color/colorWhite"
            android:textSize="17sp"
            app:buttonColor="#3eadeb"
            app:cornerRadius="5dp"
            app:shadowEnabled="false" />

        <info.hoang8f.widget.FButton
            android:id="@+id/btnDeleteTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/delete_task"
            android:textColor="@color/colorWhite"
            android:textSize="17sp"
            app:buttonColor="@color/fbutton_color_pomegranate"
            app:cornerRadius="5dp"
            app:shadowEnabled="false" />

    </LinearLayout>

</ScrollView>
